--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,30 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
-
+  build-payload:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Build Payload Docker image
+      working-directory: ./payload
+      run: |
+        docker build . --file Dockerfile --tag payload:$(date +%s)
+        
+  build-astro:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Build Astro Docker image
+      working-directory: ./astro-project
+      run: |
+        docker build . --file Dockerfile --tag astro:$(date +%s)
