--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,19 +7,19 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # build-payload:
-  #   runs-on: ubuntu-latest
+  build-payload:
+    runs-on: ubuntu-latest
     
-  #   steps:
-  #   - uses: actions/checkout@v4
+    steps:
+    - uses: actions/checkout@v4
     
-  #   - name: Set up Docker Buildx
-  #     uses: docker/setup-buildx-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     
-  #   - name: Build Payload Docker image
-  #     working-directory: ./payload
-  #     run: |
-  #       docker build . --file Dockerfile --tag payload:$(date +%s)
+    - name: Build Payload Docker image
+      working-directory: ./payload
+      run: |
+        docker build . --file Dockerfile --tag payload:$(date +%s)
         
   build-astro:
     runs-on: ubuntu-latest
